# DSLR

./: .gitignore  README.md  config.yaml  pyproject.toml  test.py
dslr/: utils.py
dslr/csvchecker/: CSV_Checker.py
dslr/models/: logreg_predict.py  logreg_train.py
dslr/scripts/: describe.py  deviant.py  histogram.py  pair_plot.py  scatter_plot.py  scatter_plot_Pearson.py
models/: logreg_train.py
scripts/: describe.py  histogram.py  pair_plot.py  scatter_plot.py
tests/models/: test_logreg_train_predict.py
tests/scripts/: test_describe.py  test_histogram.py  test_pair_plot.py  test_scatter_plot.py
tests/scripts/tool/: expected_output.txt
